--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_API_BASE_URL="http://localhost:8080"
-GEMINI_API_KEY="YOUR_GEMINI_API_KEY_HERE"
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
+GEMINI_API_KEY="YOUR_GEMINI_API_KEY"
+PORT=9002
